fix: add -moz-osx-font-smoothing for consistent font rendering on Firefox

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,6 +23,7 @@ html {
   background-color: var(--color-bg);
   color: var(--color-text);
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
